[gd_scene load_steps=8 format=2]

[ext_resource path="res://UI/player_task/80358-1.png" type="Texture" id=1]
[ext_resource path="res://assets/font/PuHuiTi-Regular.otf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/DialogPanel.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://assets/font/PuHuiTi-Regular.otf"

[sub_resource type="DynamicFont" id=2]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 20
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[node name="DialogPanel" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -210.0
margin_right = 210.0
margin_bottom = 369.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = 51.5
margin_right = 190.0
margin_bottom = 146.5

[node name="Button" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_right = 366.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 1 )
text = "对话"

[node name="Button3" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_top = 33.0
margin_right = 366.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 1 )
text = "交易"

[node name="Button2" type="Button" parent="Control/TextureRect/VBoxContainer"]
margin_top = 66.0
margin_right = 366.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 1 )
text = "取消"

[node name="Label" type="Label" parent="Control/TextureRect"]
margin_left = 35.0
margin_top = 42.0
margin_right = 75.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0.12549, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "千货商"

[node name="Label2" type="Label" parent="Control/TextureRect"]
margin_left = 276.0
margin_top = 42.0
margin_right = 401.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 4 )
text = "好感度：-100"

[node name="Label3" type="Label" parent="Control/TextureRect"]
margin_left = 35.0
margin_top = 93.0
margin_right = 400.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 4 )
text = "我是不想和你多废话的...."
autowrap = true

[connection signal="pressed" from="Control/TextureRect/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Control/TextureRect/VBoxContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Control/TextureRect/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
